Noch ohne Save der Daten

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "gafdbfront",
     "version": "0.1.0",
+    "homepage": "https://tgdomenig.github.io/gafdbfront/",
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^5.3.7",
@@ -16,6 +17,7 @@
         "antd": "^5.15.0",
         "aws-amplify": "^6.0.18",
         "date-fns": "^3.3.1",
+        "gh-pages": "^6.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.2",
@@ -29,7 +31,9 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "amplify-modelgen": "node amplify/scripts/amplify-modelgen.js",
-        "amplify-push": "node amplify/scripts/amplify-push.js"
+        "amplify-push": "node amplify/scripts/amplify-push.js",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
